// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Tab inside a component correctly 1`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          1
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          2
        </span>
      </div>
      <div id="r-tabs-2"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          3
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content">
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-0"
         style="display: none;"
    >
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="0"
         aria-labelledby="r-tabs-1"
         style
    >
      2
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-2"
         style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab 1`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          1
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          2
        </span>
      </div>
      <div id="r-tabs-2"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          3
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content">
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-0"
         style="display: none;"
    >
    </div>
    <div>
      <div id="r-tab"
           role="tabpanel"
           class="r-tab__panel"
           tabindex="0"
           aria-labelledby="r-tabs-1"
      >
        2
      </div>
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-2"
         style="display: none;"
    >
      3
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab from an array 1`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          1
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          2
        </span>
      </div>
      <div id="r-tabs-2"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          3
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content">
  </div>
</div>
`;

exports[`should render correctly after inserting a tab with name 1`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          bar
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          foo
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content">
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-0"
         style="display: none;"
    >
      bar
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="0"
         aria-labelledby="r-tabs-1"
         style
    >
      foo
    </div>
  </div>
</div>
`;

exports[`should render nav-bottom slot correctly 1`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
    </div>
  </div>
  Nav Bottom
  <div class="r-tabs__content">
  </div>
</div>
`;
